[gd_scene load_steps=5 format=3 uid="uid://dbjlfmy7g334r"]

[ext_resource type="Script" uid="uid://burmvupcckyo8" path="res://board/clue/answer.gd" id="1_g35tc"]

[sub_resource type="LabelSettings" id="LabelSettings_42esb"]
line_spacing = 0.0
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_u2ke1"]
line_spacing = 0.0
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_g35tc"]
font_size = 40
font_color = Color(0.672794, 0.683652, 0.348106, 1)

[node name="ClueAnswer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g35tc")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.0782133, 0.0616, 0.56, 1)

[node name="CategoryText" type="Label" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
text = "Sample Category"
label_settings = SubResource("LabelSettings_42esb")

[node name="ClueText" type="Label" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
text = "This is a sample clue. "
label_settings = SubResource("LabelSettings_u2ke1")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="AnswerText" type="Label" parent="."]
layout_mode = 0
offset_top = 573.0
offset_right = 1280.0
offset_bottom = 720.0
text = "This is a sample answer."
label_settings = SubResource("LabelSettings_g35tc")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true
